# https---github.com-SaiPooja6-finalimage

./: README.md  pyproject.toml  session_store.db
conf/base/: catalog.yml  parameters_grayscaleimage.yml
src/finalimage/: __init__.py  __main__.py
src/finalimage/pipelines/grayscaleimage/: __init__.py  nodes.py  pipeline.py
tests/pipelines/grayscaleimage/: test_pipeline.py
