[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "finalimage"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
finalimage = "finalimage.__main__:main"

[tool.kedro]
package_name = "finalimage"
project_name = "finalimage"
kedro_init_version = "0.19.8"
tools = [ "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "finalimage.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "f6d9f119a89b4a72a860c6f9ba7ecc5a"
